--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -7,6 +7,7 @@ include(ExternalProject)
 ExternalProject_Add(
     gtest
     URL https://github.com/google/googletest/archive/master.zip
+    #URL https://github.com/google/googletest/archive/release-1.8.0.zip
     PREFIX ${CMAKE_CURRENT_BINARY_DIR}/gtest
     # Disable install step
     INSTALL_COMMAND ""
